2011-9-5_9:28 Zhao Bolu<zhaobl880704@gmail.com>
change files so that it could run in 5Vs5
2011-9-4_22:34 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.17 
clear Player TeamPlayer
2011-9-4_21:30 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.16
clear output
Player 
2011-9-4 3:19pm Duan Pengfei<bestdpf@gmail.com>
change readme, CNchanelog and some other readme files
seu3d-1.0.15

2011-9-4 12:15 Duan Pengfei<bestdpf@gmail.com>
delete Walk
and remove some strategies function in Player.cpp

2011-9-4_12:05 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.13
clear TeamPlayer
2011-9-4 11:37am Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.12
delete Pass_Test.* direct

2011-9-3 7:23pm Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.11
delete MoveCoM.* and change some files include it
2011-9-3_15:56 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.10
delete Message in perception/Message.*
delete some funtions in Vision
fixed a warning in WorldModel
2011-9-3 3:46pm Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.9
remove Kick.cpp,BackLeg.*,TurnLeg.*, AccelerateFoot.*,
and clean BasicKick, but it is still very dirty, I will clean it more in the next version
and in the next version I will clean MoveCom
Please test the kick motion carefully and feeback

2011-9-3 11:00  Pengfei Duan<bestdpf@gmail.com>
version seu3d-1.0.8
delete WalkSlow class,and delete goToSlow(*) in Player.cpp
delete task/WalkSlow.*
delete StepSlow class in task/StepSlow.* by deleting task/StepSlow.*
the same with SwingFootSlow class
the same with ShiftFoot
the same with Shoot,but the shoot now use is very dirty, I will clean it in the next version
2011-9-3 3:55	Pengfei Duan<bestdpf@gmail.com>
clean some class ever used in Player.cpp:
delete BackKick in task/BackKick.*
delete PassSidelong in task/PassSidelong.*
delete PassAng45 in task PassAng45.*
delete SideKick in task/SideKick.*
2011-9-2_23:05 Zhao Bolu<zhaobl880704@gmail.com>
delete Localization
2011-9-2_22:01 Zhao Bolu<zhaobl880704@gmail.com>
delete log in WorldModel and Player