@@ -1,3 +1,6 @@
+2011-9-5_11:30 Zhao Bolu<zhaobl880704@gmail.com>
+seu3d-1.0.19
+change start.sh
 2011-9-5_9:28 Zhao Bolu<zhaobl880704@gmail.com>
 change files so that it could run in 5Vs5
 2011-9-4_22:34 Zhao Bolu<zhaobl880704@gmail.com>
